@@ -1,5 +1,6 @@
 2013-10-02 v0.2.17 
   (add) keyboard layout variants
+  (add) Bluetooth Standby Support
   
 2013-09-25 v0.2.16
   (add) disable update on netboot
